add by onekey_bat

--- a/source/_posts/13-关于二叉树.md
+++ b/source/_posts/13-关于二叉树.md
@@ -28,10 +28,10 @@ updated: 2018-10-14 14:06:00
 深度为k的二叉树至多有2^k-1个结点.
 对任何一棵二叉树T，如果其终端结点数为N，度为2的结点数为M，则N=M+1。
 >>#### 1.1 满二叉树
->>pass
+>>就是满树呗。
 
 >>#### 1.2完全二叉树
->>pass
+>>高度为h的完全二叉树。前h-1层为满树，最后一层元素全部集中在左侧。
 
 
 >### 2.二叉查找树
